# Image_App_OpenCV

./: README.md
Image_App/: CMakeLists.txt
Image_App/gui_qt6/ImageTools/: CMakeLists.txt  imagetoolsgui.cpp  imagetoolsgui.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Image_App/img_tools/: CMakeLists.txt
Image_App/img_tools/include/: imagetools.hpp  imgtools.hpp
Image_App/img_tools/src/: imagetools.cpp  imgtools.cpp  test.cpp
